# adv770-2.31

./: README
acode-12.89/acdc-12.47/: INSTALL  LICENCE  NEWS  README  acdc.c  acdc.h  btree.c  btree.h  build  chrtobin.c  clsfile.c  const.h  domajor.c  dominor.c  doswitch.c  finalise.c  game.h  getconst.c  getnames.c  gettxt.c  gripe.c  initial.c  line.h  major.h  minor.h  nextline.c  openfrst.c  openout.c  opnsrc.c  organise.c  output.h  param.c  param.h  parse.c  recase.c  source.h  storchar.c  storword.c  symbol.c  symbol.h  (+5 more)
acode-12.89/kernel-12.89/: INSTALL  NEWS  README
acode-12.89/kernel-12.89/extras/: Makefile.am  acode.cpp  acode.h  acode.html  acode.pro  button.cpp  button.h  configure.ac  defaults.h  info.h  libtest.c  main.cpp  page.h  window.cpp  window.h
adv770-2.31/: README  actions.acd  adv770.acd  at.acd  defs.acd  init.acd  moretext.acd  objects.acd  places.acd  procs.acd  repeat.acd  text.acd  vars.acd  words.acd
adv770-2.31/C/: Makefile  adv0.h  adv00.c  adv01.c  adv02.c  adv03.c  adv04.c  adv05.c  adv1.h  adv2.h  adv3.h  adv4.h  adv5.h  adv6.h  qdos.c
adv770-2.31/extras/: AUTHORS  NEWS  adv770.desktop  advinfo.h  advinfo.sh
adv770-2.31/opt/: README  debug.acd
doc/: acode-12.89.epub
